--- a/nextgisweb/feature_layer/nodepkg/package.json
+++ b/nextgisweb/feature_layer/nodepkg/package.json
@@ -3,6 +3,10 @@
     "version": "0.0.0",
     "type": "module",
     "dependencies": {
-        "react-draggable": "^4.5.0"
+        "react-draggable": "^4.5.0",
+        "@dnd-kit/core": "^6.3.1",
+        "@dnd-kit/modifiers": "^9.0.0",
+        "@dnd-kit/sortable": "^10.0.0",
+        "@dnd-kit/utilities": "^3.2.2"
     }
 }
